:hammer: Fix input width on small devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -127,7 +127,6 @@ a {
 .list {
   list-style: none;
   padding-left: 0;
-  color: var(--color--headings);
 }
 .list--inline .list__item {
   display: inline-block;
@@ -191,7 +190,7 @@ a {
   font-weight: 600;
   margin: 1rem 0;
   outline: none;
-  padding: 2rem 3rem;
+  padding: 2rem 4vw;
   text-align: center;
   text-transform: uppercase;
   white-space: nowrap;
@@ -287,9 +286,7 @@ a {
   border: 0;
   flex-grow: 1;
   padding: 1.5rem 2rem;
-  display: inline-block;
-  width: 5rem;
-  font-size: 1.7rem;
+  width: 0;
 }
 
 .input-group .btn {
@@ -741,10 +738,11 @@ a {
 }
 
 .block-domain__prices {
+  color: var(--color--headings);
   display: grid;
   font-size: 2rem;
   font-weight: 600;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 6rem);
   justify-items: center;
   margin: 0 auto;
